# Milo

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_user_id.py  003_remove_user_id_from_kb.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  document.py  health.py  knowledge.py  middleware.py
backend/app/api/agentscope/: __init__.py  agent.py  chat.py  credential.py  event_emitter.py  model.py  schedule.py  schemas.py  session.py  workspace.py
backend/app/core/: __init__.py  config.py  dashscope.py  database.py  deps.py  elasticsearch.py  logging.py
backend/app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  knowledge_base.py  message.py
backend/app/schemas/: __init__.py  chat.py  document.py  knowledge_base.py
backend/app/services/agent/: __init__.py  service.py
backend/app/services/chunking/: __init__.py  chunker.py  smart_chunker.py
backend/app/services/conversation/: __init__.py  service.py
backend/app/services/document/: __init__.py  md_parser.py  parser.py  pdf_parser.py  service.py
backend/app/services/embedding/: __init__.py  base.py  (+1 more)
backend/app/tests/: test_agent_service.py  test_api.py  test_conversation_service.py  test_document_parser.py  test_document_service.py  test_embedding_service.py  test_es_client.py  test_integration.py  test_knowledge_service.py  test_reranker.py  test_retriever.py  test_smart_chunker.py
(+36 files in other folders)
